# anomalib

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .markdownlint.yaml  .mdlrc  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Fully_Unsupervised_Pipeline.py  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  SECURITY.md  cfa.ipynb  classification.yaml  codecov.yml  config.yaml  hparams_search.py  hpo.py  hpo_sweep.py  ipas_default.config  markdownlint.rb  new_perlin.py  padim.py  pyproject.toml  requirements.txt  rkde.ipynb  setup.py  test.py  third-party-programs.txt  tiling_testunga.py  (+6 more)
.ci/: Dockerfile  README.md  cuda10.2.Dockerfile  cuda11.4.Dockerfile  ipas_default.config  trivy.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  epic.yaml  feature_request.md  feature_request.yaml  task.yaml  user_story.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: _reusable-artifact-builder.yaml  _reusable-code-quality.yaml  _reusable-production-release-process.yaml  _reusable-rc-release-process.yaml  _reusable-release-publisher.yaml  _reusable-release-status.yaml  _reusable-release-validation.yaml  _reusable-security-scan.yaml  _reusable-test-suite.yaml  _reusable-version-check.yaml  checkmarx-one.yml  code_scan.yml  dco_merge_group.yml  docs.yml  labeler.yml  manual-hooks.yaml  nightly.yml  pr-checks.yaml  pr.yaml  pre-merge.yml  pre_merge.yml  pre_merge_code_quality.yml  pre_merge_tests.yml  publish.yml  pull-request.yaml  release.yaml  security-checks.yaml  security-checks.yml  semgrep-scan.yml  test-pr.yaml  tox.yml  upload_coverage.yml
.gitlab/: .gitlab-ci.yml
.gitlab/issue_templates/: bug.md
.gitlab/merge_request_templates/: merge_request.md
anomalib/: __init__.py
anomalib/base/: __init__.py
anomalib/cli/: __init__.py  cli.py
anomalib/components/: __init__.py
anomalib/config/: __init__.py  config.py  sweep_config.py
anomalib/core/: __init__.py
anomalib/data/: __init__.py  anomaly_dataset.py  avenue.py  base.py  btech.py  custom.py  folder.py  folder_3d.py  inference.py  mvtec.py  mvtec_3d.py  mvtec_loco.py  parser.py  shanghaitech.py  synthetic.py  task_type.py  tiler.py  ucsd_ped.py  utils.py  visa.py
anomalib/datasets/: __init__.py  anomaly_dataset.py  augmentation_config.yaml  mvtec.py  parser.py  tiler.py  transforms.py  utils.py
anomalib/deploy/: __init__.py  export.py  inference.py  optimize.py
anomalib/helpers/: sigopt_logger.py
anomalib/hpo/: __init__.py
anomalib/integration/: __init__.py
anomalib/loggers/: __init__.py  base.py  sigopt.py  tensorboard.py  wandb.py
anomalib/models/: __init__.py
anomalib/post_processing/: __init__.py  post_process.py  post_processor.py  visualizer.py
anomalib/pre_processing/: __init__.py  pre_process.py  tiler.py  transform.py
anomalib/training/: __init__.py  trainer.py
anomalib/utils/: __init__.py  config.py  download_progress_bar.py  dynamic_module.py  image.py  kde.py  metrics.py  optimize.py  pca.py  post_process.py  torchvision_future.py  visualizer.py
apis/: init_venv.sh
apis/ote/: __init__.py  configuration.yaml  openvino.py  task.py
apis/tests/: __init__.py  test_ote_anomaly_classification.py
awesome-anomaly-papers/: README.md  template.md
benchmarking/: README.md  post-process.sh  train.sh
checkpoints/: epoch=941-step=942.ckpt
config/model/: cflow.yaml  fastflow.yaml  ganomaly.yaml  padim.yaml  patchcore.yaml
configs/: README.md
configs/data/: avenue.yaml  btech.yaml  dataframe.yaml  datumaro.yaml  folder.yaml  kolektor.yaml  mvtec.yaml  mvtec_3d.yaml  mvtec_loco.yaml  shanghaitec.yaml  shanghaitech.yaml  ucsd_ped.yaml  visa.yaml
configs/model/: ai_vad.yaml  cfa.yaml  cflow.yaml  dfkde.yaml  dfm.yaml  draem.yaml  dsr.yaml  fastflow.yaml  fre.yaml  ganomaly.yaml  padim.yaml  patchcore.yaml  reverse_distillation.yaml  rkde.yaml  stfpm.yaml  uflow.yaml
docs/: Makefile  README.md  make.bat  requirements.txt
docs/source/: api_references.rst  conf.py  index.md  index.rst  introduction.md  models.rst
embeddings/carpet/: embedding.pickle
examples/api/: 00_installation.py
examples/cli/: 00_installation.sh
examples/configs/: README.md
examples/notebooks/: README.md
hparams_configs/: stfpm_sweep.yaml
notebooks/: 001-getting-started.ipynb  README.md
notebooks/000_getting_started/: 001_getting_started.ipynb  README.md
notebooks/001-getting-started/: 001-getting-started.ipynb
notebooks/001_getting_started/: 001_getting_started.ipynb
notebooks/002-anomalib-datamodules/: 002-anomalib-datamodules.ipynb
notebooks/002-datamodules/: 002-btech.ipynb  002-folder.ipynb  002-mvtec.ipynb
notebooks/002_datamodules/: 002_btech.ipynb  002_folder.ipynb  002_mvtec.ipynb
notebooks/100_datamodules/: 101_btech.ipynb  102_mvtec.ipynb  103_folder.ipynb  104_mvtec_loco.ipynb  104_tiling.ipynb  105_csv.ipynb  README.md
notebooks/101-benchmarking/: 101-benchmarking.ipynb
notebooks/200_benchmarking/: 201_benchmarking.ipynb
notebooks/200_models/: 200_models.ipynb  201_fastflow.ipynb  README.md  fastflow.ipynb
notebooks/300_benchmarking/: 301_benchmarking.ipynb  302_hpo_wandb.ipynb  README.md
notebooks/400_openvino/: 401_nncf.ipynb  README.md  nncf.ipynb
notebooks/700_metrics/: README.md  (+6 more)
papers/: README.md  template.md
requirements/: base.txt  core.txt  dev.txt  docs.txt  engine.txt  extras.txt  installer.txt  loggers.txt  notebooks.txt  openvino.txt  requirements.txt  requirements_dev.txt  requirements_openvino_mo.txt
src/: test.py
tests/: README.md  __init__.py  conftest.py  test_train.py
tools/: demo.ipynb  hpo.py  inference.py  inference_gradio.py  openvino_inference.py  run.py  test.py  train.py  train_ensemble.py
tools/experimental/rust_inference/: Cargo.toml  README.md
tools/experimental/rust_inference/src/: errors.rs  image.rs  main.rs  model.rs  visualizer.rs
(+2474 files in other folders)
